objects/A1_C360API_Tokens__mdt.object
<CustomObject>
    <description>Purpose of this MDT is to store the access tokens returned by 360 API, so that tokens can be reused for data api calls.</description>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access_token</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>expires_at__c</fullName>
        <label>expires_at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>expires_in__c</fullName>
        <label>expires_in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>A1_C360API_Tokens</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>access_token__c</columns>
        <columns>BrandId__c</columns>
        <columns>expires_at__c</columns>
        <columns>expires_in__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllRecords</label>
    </listViews>
    <pluralLabel>A1_C360API_Tokens</pluralLabel>
</CustomObject>